# ArUco-tags-recog_fused_cube

./: .gitignore  PoseUdpReceiver.cs  README.md  Unity中识别ArUco驱动虚拟物体.md  aruco_fusedpose.py  aruco_fusedpose说明.md  deeparuco++_fusedpose.py  deeparuco++_fusedpose说明.md  deeparuco_fusedpose.py  deeparuco_fusedpose说明.md  deeparuco_tagprinted.odt  deeparuco识别运行代码.odt  detect_aruco3.py  detect_aruco5x5_100_cube_fused_pose.py  detect_aruco5x5_100_tags_cam.py  detect_aruco6x6_250_tags_cam.py  detect_aruco_9tag_cube_dual_thread_fused_pose.py  detect_aruco_9tag_cube_rigid_async_pose.py  detect_aruco_cube_fused_pose.py  detect_aruco_cube_rigid_async_pose.py  detect_charuco_cam.py  detect_chimeta.py  detect_deeparuco_tags_cam.py  detect_jumarker_cam.py  detect_puzzlepole_cam.py  detect_rubik_8.py  detect_rubik_8_ubuntu.sh  detect_seabery_cam.py  generate_deeparuco_mip_tags.py  generate_deeparuco_tags.py  generate_marker_designs_8_id4.py  generate_seabery_8.sh  requirements_deeparuco_infer.txt  setup_deeparuco_env.sh  tags 识别代码.odt  未命名 1.odt
Editor/: CodexAndroidBuild.cs  CodexAndroidGradlePostprocessor.cs
HJQ/: AprilTagCameraAccessTracker.cs  ArucoCameraFrameSource.cs  BallVolleyAdditiveLoader.cs  HJQ.unity  NativeArucoPlugin.cs
Models/: tennis_machine_with_balls_low_poly.glb
NativePlugins/MRBadmintonAruco/: CMakeLists.txt  README.md
NativePlugins/MRBadmintonAruco/src/: mrbadminton_aruco.cpp
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  (+2 more)
src/: CMakeLists.txt  cvdrawingutils.cpp  markerdetector.cpp  markerdetector.h  model.cpp
(+12 files in other folders)
